@@ -69,12 +69,12 @@ class TimeTest extends TestCase
         $time = new Time('2018-01-01');
 
         $years = $months = $days = 1;
-        $this->assertSame('2018-01-01', (clone $time)->modifyDate(0, 0)->getDateISOlocal());
-        $this->assertSame('2019-02-02', (clone $time)->modifyDate($years, $months, $days)->getDateISOlocal());
+        $this->assertSame('2018-01-01', (clone $time)->modifyDate(0, 0)->getDateISO());
+        $this->assertSame('2019-02-02', (clone $time)->modifyDate($years, $months, $days)->getDateISO());
         // 2017-01-01
         // 2016-12-01
         // 2016-11-30
-        $this->assertSame('2016-11-30', (clone $time)->modifyDate(-$years, -$months, -$days)->getDateISOlocal());
+        $this->assertSame('2016-11-30', (clone $time)->modifyDate(-$years, -$months, -$days)->getDateISO());
 
         // Modifying month only.------------------------------------------------
         $log = [];
@@ -85,7 +85,7 @@ class TimeTest extends TestCase
         $time = (new Time())->setDate($year, $month, $day);
         $limit = 25;
         $log[] = '';
-        $log[] = '     ' . $time->getDateISOlocal();
+        $log[] = '     ' . $time->getDateISO();
         for ($months = 1; $months <= $limit; ++$months) {
             $yr = $year;
             $mnth = $month;
@@ -104,7 +104,7 @@ class TimeTest extends TestCase
                 ($yr)
                 . '-' . str_pad('' . $mnth, 2, '0', STR_PAD_LEFT)
                 . '-' . str_pad('' . ($day), 2, '0', STR_PAD_LEFT),
-                $result = (clone $time)->modifyDate(0, $months)->getDateISOlocal()
+                $result = (clone $time)->modifyDate(0, $months)->getDateISO()
             );
             $log[] = str_pad('' . $months, 3, ' ', STR_PAD_LEFT) . ': ' . $result;
         }
@@ -115,7 +115,7 @@ class TimeTest extends TestCase
         $time = (new Time())->setDate($year, $month, $day);
         $limit = -25;
         $log[] = '';
-        $log[] = '     ' . $time->getDateISOlocal();
+        $log[] = '     ' . $time->getDateISO();
         for ($months = -1; $months >= $limit; --$months) {
             $yr = $year;
             $mnth = $month;
@@ -134,7 +134,7 @@ class TimeTest extends TestCase
                 ($yr)
                 . '-' . str_pad('' . $mnth, 2, '0', STR_PAD_LEFT)
                 . '-' . str_pad('' . ($day), 2, '0', STR_PAD_LEFT),
-                $result = (clone $time)->modifyDate(0, $months)->getDateISOlocal()
+                $result = (clone $time)->modifyDate(0, $months)->getDateISO()
             );
             $log[] = str_pad('' . $months, 3, ' ', STR_PAD_LEFT) . ': ' . $result;
         }
@@ -145,7 +145,7 @@ class TimeTest extends TestCase
         $time = (new Time())->setDate($year, $month, $day);
         $limit = 25;
         $log[] = '';
-        $log[] = '     ' . $time->getDateISOlocal();
+        $log[] = '     ' . $time->getDateISO();
         for ($months = 1; $months <= $limit; ++$months) {
             $yr = $year;
             $mnth = $month;
@@ -164,7 +164,7 @@ class TimeTest extends TestCase
                 ($yr)
                 . '-' . str_pad('' . $mnth, 2, '0', STR_PAD_LEFT)
                 . '-' . str_pad('' . ($day), 2, '0', STR_PAD_LEFT),
-                $result = (clone $time)->modifyDate(0, $months)->getDateISOlocal()
+                $result = (clone $time)->modifyDate(0, $months)->getDateISO()
             );
             $log[] = str_pad('' . $months, 3, ' ', STR_PAD_LEFT) . ': ' . $result;
         }
@@ -175,7 +175,7 @@ class TimeTest extends TestCase
         $time = (new Time())->setDate($year, $month, $day);
         $limit = -25;
         $log[] = '';
-        $log[] = '     ' . $time->getDateISOlocal();
+        $log[] = '     ' . $time->getDateISO();
         for ($months = -1; $months >= $limit; --$months) {
             $yr = $year;
             $mnth = $month;
@@ -194,7 +194,7 @@ class TimeTest extends TestCase
                 ($yr)
                 . '-' . str_pad('' . $mnth, 2, '0', STR_PAD_LEFT)
                 . '-' . str_pad('' . ($day), 2, '0', STR_PAD_LEFT),
-                $result = (clone $time)->modifyDate(0, $months)->getDateISOlocal()
+                $result = (clone $time)->modifyDate(0, $months)->getDateISO()
             );
             $log[] = str_pad('' . $months, 3, ' ', STR_PAD_LEFT) . ': ' . $result;
         }
@@ -205,23 +205,23 @@ class TimeTest extends TestCase
 
         // Days only.
         $time = new Time('2018-01-01');
-        $this->assertSame('2018-01-02', (clone $time)->modifyDate(0, 0, 1)->getDateISOlocal());
+        $this->assertSame('2018-01-02', (clone $time)->modifyDate(0, 0, 1)->getDateISO());
 
         // Last day of February.
         $time = new Time('2018-01-31');
-        $this->assertSame('2018-02-28', (clone $time)->modifyDate(0, 1)->getDateISOlocal());
+        $this->assertSame('2018-02-28', (clone $time)->modifyDate(0, 1)->getDateISO());
         // Leap year last day of February.
-        $this->assertSame('2020-02-29', (clone $time)->modifyDate(2, 1)->getDateISOlocal());
+        $this->assertSame('2020-02-29', (clone $time)->modifyDate(2, 1)->getDateISO());
 
         // Last day of February.
         $time = new Time('2018-01-01');
-        $this->assertSame('2018-02-28', (clone $time)->modifyDate(0, 1)->setToLastDayOfMonth()->getDateISOlocal());
+        $this->assertSame('2018-02-28', (clone $time)->modifyDate(0, 1)->setToLastDayOfMonth()->getDateISO());
         $time = new Time('2018-03-31');
-        $this->assertSame('2018-02-28', (clone $time)->modifyDate(0, -1)->getDateISOlocal());
+        $this->assertSame('2018-02-28', (clone $time)->modifyDate(0, -1)->getDateISO());
 
 
         $time = new Time('2018-01-01');
-        $this->assertSame('2018-02-20', (clone $time)->modifyDate(0, 0, 50)->getDateISOlocal());
+        $this->assertSame('2018-02-20', (clone $time)->modifyDate(0, 0, 50)->getDateISO());
     }
 
     /**
@@ -230,8 +230,8 @@ class TimeTest extends TestCase
     public function testModifyTime()
     {
         $time = new Time('2018-01-01 15:37:13');
-        $this->assertSame('2018-01-01 16:38:14', (clone $time)->modifyTime(1, 1, 1)->getDateTimeISOlocal());
-        $this->assertSame('2018-01-02 16:38:14', (clone $time)->modifyTime(25, 1, 1)->getDateTimeISOlocal());
-        $this->assertSame('2017-12-31 14:36:12', (clone $time)->modifyTime(-25, -1, -1)->getDateTimeISOlocal());
+        $this->assertSame('2018-01-01 16:38:14', (clone $time)->modifyTime(1, 1, 1)->getDateTimeISO());
+        $this->assertSame('2018-01-02 16:38:14', (clone $time)->modifyTime(25, 1, 1)->getDateTimeISO());
+        $this->assertSame('2017-12-31 14:36:12', (clone $time)->modifyTime(-25, -1, -1)->getDateTimeISO());
     }
 }
